fix: single case study - team - clippath issue

--- a/styles/components/_team.scss
+++ b/styles/components/_team.scss
@@ -53,6 +53,7 @@
     .img-container {
       position: relative;
       margin-bottom: 20px;
+      background-color: transparent !important;
 
       .image-team {
         height: 100%;
